--- a/arch/arm64/boot/dts/sprd/ums512-1h10.dts
+++ b/arch/arm64/boot/dts/sprd/ums512-1h10.dts
@@ -58,7 +58,7 @@
 	chosen {
 		stdout-path = "serial1:921600n8";
 		bootargs = "earlycon loop.max_part=7 loglevel=7
-			    printk.devkmsg=on log_buf_len=1M
+			    printk.devkmsg=on log_buf_len=1M kpti=0
 			    dummy_hcd.num=0 swiotlb=1";
 	};
 
