--- a/arch/arm64/boot/dts/sprd/ums9621-base.dts
+++ b/arch/arm64/boot/dts/sprd/ums9621-base.dts
@@ -63,7 +63,7 @@
 	chosen: chosen {
 		stdout-path = "serial1:921600n8";
 		bootargs = "earlycon=sprd_serial,0x20210000,921600n8 console=ttyS1,921600n8
-			    loop.max_part=7 loglevel=1 log_buf_len=1M
+			    loop.max_part=7 loglevel=1 log_buf_len=1M kpti=0
 			    firmware_class.path=/odm/firmware,/vendor/firmware
 			    init=/init root=/dev/ram0 rw printk.devkmsg=on pcie_ports=compat
 			    swiotlb=1 rcupdate.rcu_expedited=1 rcu_nocbs=0-7";
